--- a/package.json
+++ b/package.json
@@ -33,10 +33,15 @@
   "homepage": "https://birdlaketree.github.io/threejs-physics-boilerplate/",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.3.2",
-    "parcel": "^2.3.2"
+    "buffer": "^6.0.3",
+    "parcel": "^2.3.2",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10"
   },
   "browserslist": "> 0.5%, last 2 versions, not dead",
   "dependencies": {
+    "@enable3d/ammo-physics": "^0.25.1",
+    "ammo.js": "0.0.10",
     "gh-pages": "^3.2.3",
     "three": "^0.138.3"
   }
